[package]
name = "mdbook-puml"
version = "0.1.1"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
edition = "2018"
keywords = ["mdbook", "plantuml", "markdown", "commonmark"]
description = "A simple mdbook preprocessor for rendering inline PlantUML code blocks into inline SVG"
repository = "https://github.com/hamaluik/mdbook-puml"
readme = "README.md"
license = "Apache-2.0"
exclude = [
    "docs/*",
    "examples/*",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
clap = "3.0.14"
mdbook = "0.4.15"
pulldown-cmark = "0.9.1"
pulldown-cmark-to-cmark = "10.0.0"
serde_json = "1.0"

